# minsy_mvp_backend_v2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REFACTOR_IMPLEMENTATION_PLAN_20260225.md  CLAUDE.md  Caddyfile  DSL_BACKTEST_MCP_REPORT.md  Dockerfile  README.md  README_INDEX.md  REFACTOR_INCREMENTAL_TODO_20260225.md  compose.dev.yml  pyproject.toml  test_ccxt_okx.py
agents/: __init__.py
api/: __init__.py  config.py  deps.py  main.py  middleware.py
apps/: __init__.py
dev_docs/: deployment_broker_preflight_implementation_plan.md  indicator_deprecation_policy.md  indicator_inventory_report_2026-03-15.md  indicator_token_cost_baseline_2026-03-17.md  orchestrator_mcp_phase_tool_matrix.md  pre_strategy_cache_benchmark_2026-03-17.md
dev_tools/: strategy_failure_diagnostics.py  strategy_orchestrator_adx_chop_e2e.py  strategy_validate_batch_harness.py
env/: .env.common.example  .env.dev.api.example  .env.dev.beat.example  .env.dev.example  .env.dev.mcp.example  .env.dev.worker_cpu.example  .env.dev.worker_io.example  .env.prod.api.example  .env.prod.beat.example  .env.prod.example  .env.prod.mcp.example  .env.prod.worker_cpu.example  .env.prod.worker_io.example  .env.secrets.example  Untitled
research/: __init__.py
scripts/: audit_backend_live_chain.py  audit_frontend_like_full_chain_20260225.py  audit_frontend_sim_chain.py  audit_market_data_workload.py  audit_post_deployment_chain.py  backfill_session_titles.py  bench_new_mcp_tools.py  benchmark_indicator_token_cost.py  benchmark_pre_strategy_cache.py  check_import_boundaries.py  cleanup_billing_data.py  cleanup_test_user_data.py  cleanup_test_user_data_simple.py  codex_backend_full_chain_audit_20260225.py  dev_down.sh  dev_up.sh  e2e_pre_strategy_to_deployment.py  e2e_trading_click_flow.py  generate_demo_full_chat_session.py  generate_indicator_docs.py  live_paper_trading_full_flow.py  live_sandbox_alpaca_parity.py  loadtest_paper_trading.py  migrate_legacy_docker_data.py  migrate_users_to_clerk.py  openai_mcp_smoketest.py  openai_mcp_trading_e2e.py  refactor_factor_checks.py  render_env.sh  replay_staged_incremental_to_local.py  restore_postgres_backup.sh  run_incremental_sync_window.py  run_integration_tests.sh  simulated_runtime_stresstest.py  (+7 more)
(+812 files in other folders)
