[project]
name = "minsy-backend"
version = "0.1.0"
description = "Backend for Minsy - AI-powered quantitative trading strategy platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "sqlalchemy>=2.0.35",
    "greenlet>=3.1.1",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy>=2.0.0",
    "ta-lib>=0.5.0",
    "pandas-ta>=0.3.14b",
    "quantstats>=0.0.64",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pytz>=2024.1",
    "psutil>=7.2.2",
    "rich>=14.3.2",
    "yfinance>=1.2.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "jsonpatch>=1.33",
    "celery>=5.4.0",
    "flower>=2.0.1",
    "python-telegram-bot>=22.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
